--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
                   <li><i class="bi bi-rounded-right"></i> <strong>Birthday:</strong>17 september 2003</li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Website:</strong>https://sandeep9559.github.io/Sandeep/ </li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Phone:</strong>+91 9559652054</li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>City:</strong> City : Mirzapur, Uttar Pradesh , India</li>
+                  <li><i class="bi bi-rounded-right"></i> <strong>City:</strong> Mirzapur, Uttar Pradesh , India</li>
                 </ul>
               </div>
               <div class="col-lg-6">
