--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
         </div>
 
         <div>
-          <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" allowfullscreen></iframe>
+                   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3485.101013012614!2d78.24437661441976!3d29.13221086804181!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390b96ff929daa1b%3A0x6f84c5006226847c!2sRajkiya%20Engineering%20College%20Bijnor!5e0!3m2!1sen!2sin!4v1640954973355!5m2!1sen!2sin" height="450" width="1200" frameborder="0" allowfullscreen></iframe>
         </div>
 
         <div class="row mt-5">
