--- a/contact.html
+++ b/contact.html
@@ -71,8 +71,8 @@
          
         </div>
 
-        <div>
-                   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3485.101013012614!2d78.24437661441976!3d29.13221086804181!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390b96ff929daa1b%3A0x6f84c5006226847c!2sRajkiya%20Engineering%20College%20Bijnor!5e0!3m2!1sen!2sin!4v1640954973355!5m2!1sen!2sin" height="450" width="1200" frameborder="0" allowfullscreen></iframe>
+        <div data-aos="fade-up">
+              <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3485.10117126105!2d78.24437661744385!3d29.13220620000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390b96ff929daa1b%3A0x6f84c5006226847c!2sRajkiya%20Engineering%20College%20Bijnor!5e0!3m2!1sen!2sin!4v1648967689178!5m2!1sen!2sin" frameborder="0" allowfullscreen></iframe>
         </div>
 
         <div class="row mt-5">
