updated social media link

--- a/resume.html
+++ b/resume.html
@@ -49,11 +49,12 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
+     
       <div class="header-social-links">
-        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="instagram.com/sandeep_kumar2521" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
+        <a href="https://twitter.com/SANDEEP_8756" class="twitter"><i class="bi bi-twitter"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=100050256793196" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="instagram.com/sandeep_kumar2521"class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/sandeep-kumar-23b514237" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
       </div>
 
     </div>
