--- a/about.html
+++ b/about.html
@@ -82,9 +82,9 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-rounded-right"></i> <strong>Birthday:</strong>17 september 2003</li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Website:</strong>https://sandeep9559.github.io/Sandeep/ </li>
+                  
                   <li><i class="bi bi-rounded-right"></i> <strong>Phone:</strong>+91 9559652054</li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>City:</strong> Mirzapur, Uttar Pradesh , India</li>
+                  <li><i class="bi bi-rounded-right"></i> <strong>City:</strong> Mirzapur, Uttar Pradesh</li>
                 </ul>
               </div>
               <div class="col-lg-6">
